<resources>
    <string name="app_name">Maniva Digital</string>
    <string name="title_home">Home</string>
    <string name="title_about_us">About Us</string>
    <string name="title_book_online">Book Online</string>
    <string name="title_portfolio">Porfolio</string>
    <string name="welcome_page_title">Book a Consultation Session</string>
    <string name="welcome_page_content">WELCOME TO MANIVA DIGITAL \n
Mobile App  And Website Development   |   IT-Consultation   |   Data Analysis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="remember_me">Remeber me</string>
    <string name="forget_password">Forget password</string>
    <string name="having_account">I adready have a acoount</string>

    <string name="check_internet_connection"> Please check your internet connection </string>

    <string name="not_mail">Please text a correct mail</string>
    <string name="empty_field">Field can not be empty</string>
    <string name="exist_username">This username is taken</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>

    <string name="logout">Logout</string>
</resources>