<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:layout_anchorGravity="center"
    android:foregroundGravity="center"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">


    <ImageView
    android:id="@+id/login_background_iV"
    android:layout_width="match_parent"
    android:src="@drawable/card_gradient"
    android:layout_height="match_parent"
    android:contentDescription="@string/todo" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/card"
                                    android:layout_width="@dimen/login_register_card_width"
                                    android:layout_height="wrap_content"
                                    android:alpha="0.8"
                                    android:layout_gravity="center"
                                    app:cardBackgroundColor="@color/cardview_light_background"
                                    app:cardCornerRadius="8dp"
                                    app:cardElevation="8dp">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="vertical"
                                            android:padding="8dp">


                                            <ImageView
                                                android:layout_width="match_parent"
                                                android:layout_height="100dp"
                                                android:layout_gravity="center_horizontal"
                                                android:src="@mipmap/ic_launcher_round"
                                                android:contentDescription="@string/todo" />

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center"
                                                android:text="@string/login"
                                                android:textColor="@color/colorAccent"
                                                android:textSize="24sp"
                                                android:textStyle="bold" />

                                            <com.google.android.material.textfield.TextInputLayout
                                                android:id="@+id/login_mail_tIL"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                >

                                                <com.google.android.material.textfield.TextInputEditText
                                                    android:id="@+id/login_mail_tIET"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:gravity="center"
                                                    android:hint="@string/mail"
                                                    android:imeOptions="actionNext"
                                                    android:inputType="textPersonName" />
                                            </com.google.android.material.textfield.TextInputLayout>

                                            <com.google.android.material.textfield.TextInputLayout
                                                android:id="@+id/login_pass_tIL"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                >

                                                <com.google.android.material.textfield.TextInputEditText
                                                    android:id="@+id/login_pass_tIET"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:gravity="center"
                                                    android:hint="@string/password"
                                                    android:imeOptions="actionDone"
                                                    android:inputType="textPassword" />
                                            </com.google.android.material.textfield.TextInputLayout>

                                            <CheckBox
                                                android:id="@+id/login_remember_me_cB"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/remember_me" />
                                        </LinearLayout>

                                </androidx.cardview.widget.CardView>

                    </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_fab"
            android:layout_marginTop="-28dp"
            android:layout_gravity="bottom|center_horizontal"
            app:srcCompat="@drawable/ic_baseline_check_24"
            android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/login_forget_pass_tV"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/forget_password"
                        android:textAlignment="center"
                        android:clickable="true"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:focusable="true" />
                    <Button
                        android:id="@+id/login_register_b"
                        android:layout_width="280dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_selector"
                        android:text="@string/register"
                        android:textColor="@color/cardview_light_background"
                        android:textStyle="bold"
                        />
    </LinearLayout>
</ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/login_pB"
        />
</FrameLayout>